Commit MyMensorNoAR OpenCV Code 10001 Name 1.0 03ago2017 15h55min

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -142,4 +142,6 @@
     <string name="caution_proceed_or_not">Se você continuar uma nova configuração será criada e apagará (se você possuir uma) a sua atual.</string>
     <string name="caution_proceed">CONTINUAR</string>
     <string name="caution_exit">SAIR</string>
+    <string name="sharingphotolinkusing">Compartilhe o link para esta foto usando:</string>
+    <string name="sharingvideolinkusing">Compartilhe o link para este vídeo usando:</string>
 </resources>
