--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,5 +148,7 @@
     <string name="share_media_link">link</string>
     <string name="share_media_content">media</string>
     <string name="error_mob_client_qty_exceeded">Maximum quantity of clients connected to server exceeded, closing...</string>
-    <string name="error_no_server_connection">Cannot proceed with no server connection, closing...</string>
+    <string name="error_no_server_connection">Cannot proceed due to error with server connection, closing...</string>
+    <string name="error_trial_exp_continuing_with_no_server_connection">Trial period has expired, continuing with no server connection.</string>
+    <string name="error_sub_exp_continuing_with_no_server_connection">Subscription expired, continuing with no server connection.</string>
 </resources>
